[package]
name = "spine_tiny"
version = "0.0.1"
authors = [ "pierre.krieger1708@gmail.com" ]
description = "Simple implementation of the Spine runtime"
license = "Apache-2.0"
repository = "https://github.com/tomaka/spine-rs"

[lib]
name = "spine"
path = "src/lib.rs"

[dependencies]
cgmath = "0.2"
libc = "0.1"
serde = "*"
serde_json = "*"
serde_macros = "*"

[dependencies.color]
git = "https://github.com/bjz/color-rs.git"

[dev-dependencies]
clock_ticks = "0.0"
