[package]
name = "spine_tiny"
version = "0.1.0"
authors = [ "Pierre Krieger <pierre.krieger1708@gmail.com>",
            "Johann Tuffe <tafia973@gmail.com>"]
description = "Simple implementation of the Spine runtime"
license = "Apache-2.0"
repository = "https://github.com/tomaka/spine-rs"

[lib]
name = "spine"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.3"

[dependencies.from_json]
git = "https://github.com/tomaka/from_json"

[dev-dependencies]
clock_ticks = "0.0"
